# KK

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .env.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: config.py  database.py  main.py  models.py  schemas.py
apps/backend/app/api/: deps.py
apps/backend/app/api/routes/: devices.py  enrollment.py  health.py  policies.py
apps/backend/app/security/: idaas.py
apps/backend/app/services/: llm_gateway.py  mqtt_bridge.py  pki.py  policy_engine.py
apps/dashboard/: .env.example  README.md  index.html  next.config.ts  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/dashboard/.next/: app-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace
apps/dashboard/.next/cache/: .rscinfo
apps/dashboard/.next/server/: _error.js  server-reference-manifest.json  webpack-runtime.js
apps/dashboard/.next/types/: routes.d.ts  validator.ts
apps/dashboard/app/: layout.tsx
apps/dashboard/app/callback/: page.tsx
apps/dashboard/app/policies/: page.tsx
apps/dashboard/components/devices/: DevicesPage.tsx
apps/dashboard/src/: App.tsx  vite-env.d.ts
apps/edge-agent/: README.md  agent.toml.example  pyproject.toml
apps/edge-agent/kk_agent/: actions.py  config.py  enrollment.py  main.py  tts.py  vision.py
apps/frontend/: package.json
apps/frontend/app/: AppShell.tsx
docs/: DATA_SCHEMA.md  DEPLOY_ALICLOUD.md  DEV.md  SECURITY.md  SPEC.md
infra/: README.md  docker-compose.prod.yml  docker-compose.yml
infra/mqtt/: Dockerfile  acl  mosquitto.conf
infra/pki/: bootstrap.sh
(+81 files in other folders)
