[project]
name = "kk-backend"
version = "0.1.0"
description = "Knock Knock control plane, policy gateway and PKI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "greenlet>=3.0",                    # required by SQLAlchemy async engine
    "asyncpg>=0.29",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",   # IDaaS JWT validation
    "cryptography>=42.0",               # PKI / CSR signing
    "asyncio-mqtt>=0.16",               # MQTT bridge
    "httpx>=0.27",                      # Qwen / DashScope + JWKS fetch
    "jsonschema>=4.22",                 # action validation
]

[tool.uv]
dev-dependencies = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
