[project]
name = "kk-edge-agent"
version = "0.1.0"
description = "Knock Knock Raspberry Pi edge agent"
requires-python = ">=3.11"
dependencies = [
    "asyncio-mqtt>=0.16",
    "cryptography>=42.0",     # keypair + CSR for enrollment
    "httpx>=0.27",            # enrollment call to backend
    "pydantic>=2.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
kk-agent = "kk_agent.main:main"

[project.optional-dependencies]
# On the Pi these would be the real on-device models; kept optional for dev.
vision = ["ultralytics>=8.2"]   # or tflite-runtime / picamera2 stack
tts = ["piper-tts>=1.2"]

[tool.uv]
dev-dependencies = ["pytest>=8", "ruff>=0.5"]
